--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -464,10 +464,10 @@ Resources:
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
       TimeoutInMinutes: 5
   CmsStack:
-    Type: "AWS::CloudFormation::Stack"
+    Type: AWS::CloudFormation::Stack
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         VPC: !Ref VPC
         VPCSubnet1: !Ref VPCSubnet1
@@ -483,9 +483,11 @@ Resources:
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn
+        OpsFatalMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -496,39 +498,18 @@ Resources:
         PlatformALBListenerPriorityPrefix: !Ref CmsPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref CmsEcrImageTag
         SecretsVersion: !Ref CmsSecretsVersion
-        AppName: "cms"
+        AppName: cms
         CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/api/v1"
+        AudioSqsCallbackName: !Sub /prx/${EnvironmentTypeAbbreviation}/cms-audio-lambda/SQS_CALLBACK_NAME
+        ImageSqsCallbackName: !Sub /prx/${EnvironmentTypeAbbreviation}/cms-image-lambda/SQS_CALLBACK_NAME
       Tags:
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "cms.prx.org.yml"]]
-      TimeoutInMinutes: 5
-  CmsAlarmsStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
-      Parameters:
-        OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-        OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        AudioSqsCallbackName: !Sub "/prx/${EnvironmentTypeAbbreviation}/cms-audio-lambda/SQS_CALLBACK_NAME"
-        ImageSqsCallbackName: !Sub "/prx/${EnvironmentTypeAbbreviation}/cms-image-lambda/SQS_CALLBACK_NAME"
-      Tags:
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "cms-alarms.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, cms.prx.org.yml]]
       TimeoutInMinutes: 5
   StyleguideStack:
     Type: "AWS::CloudFormation::Stack"
