Fix file name comment

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -1,4 +1,4 @@
-# stacks/container-apps/web-application.yml
+# stacks/container-apps/exchange.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   Docker web application with optional worker, using the shared platform ALB
