Update stack description

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -1,7 +1,7 @@
 # stacks/container-apps/exchange.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
-  Docker web application with optional worker, using the shared platform ALB
+  Exchange and related resources
 
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
