--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -3,21 +3,13 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Docker web application with optional worker, using the shared platform ALB
 Conditions:
-  CreateWorkerResources: !Equals [!Ref CreateWorker, true]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
-  HasAltName: !Not [!Equals [!Ref AltName, ""]]
   HasExplicitHostHeader: !Not [!Equals [!Ref ExplicitHostHeader, ""]]
 Parameters:
   # VPC ########################################################################
   VPC:
     Type: "AWS::EC2::VPC::Id"
-  VPCSubnet1:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCSubnet2:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCSubnet3:
-    Type: "AWS::EC2::Subnet::Id"
   # Load Balancer ##############################################################
   PlatformALBDNSName:
     Type: String
@@ -53,8 +45,6 @@ Parameters:
     Type: String
   EcrImageTag:
     Type: String
-  CreateWorker:
-    Type: String
   DesiredWebs:
     Type: String
     Default: 2
@@ -73,19 +63,11 @@ Parameters:
   SharedMemcachedEndpointAddress:
     Type: String
   # App ENV #################################################################
-  AppName:
-    Type: String # castle, crier, cms, feeder
-  AltName:
-    Type: String
-    Default: ""
   ExplicitHostHeader:
     Type: String
     Default: ""
   SecretsVersion:
     Type: String
-  ContainerPort:
-    Type: String
-    Default: 3000
   ContainerMemory:
     Type: String
     Default: 500
@@ -98,9 +80,6 @@ Parameters:
   WebContainerCommand:
     Type: String
     Default: web
-  HealthCheckPath:
-    Type: String
-    Default: /api/v1
   AudioSqsCallbackName:
     Type: AWS::SSM::Parameter::Value<String>
   ImageSqsCallbackName:
@@ -113,8 +92,8 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 3
       UnhealthyThresholdCount: 3
-      HealthCheckPath: !Ref HealthCheckPath
-      Name: !Sub ${AppName}-${EnvironmentTypeAbbreviation}
+      HealthCheckPath: /api/v1
+      Name: !Sub cms-${EnvironmentTypeAbbreviation}
       Port: 80
       Protocol: HTTP
       TargetGroupAttributes:
@@ -122,11 +101,11 @@ Resources:
           Value: "30"
       Tags:
         - Key: Project
-          Value: !Ref AppName
+          Value: cms
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AppName}-${EnvironmentType}
+          Value: !Sub cms-${EnvironmentType}
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
@@ -142,7 +121,7 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - !Sub ${AppName}.*
+            - cms.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   ALBHTTPHostWildcardListenerRule:
@@ -154,35 +133,9 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - !Sub ${AppName}.*
+            - cms.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
-  ALBHTTPSAlternateWildcardListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: HasAltName
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref ALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - !Sub ${AltName}.*
-      ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "01"]]
-  ALBHTTPAlternateWildcardListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: HasAltName
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref ALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - !Sub ${AltName}.*
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "01"]]
   ALBHTTPSExplicitListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Condition: HasExplicitHostHeader
@@ -215,15 +168,15 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[${AppName}][ALB][Error] Target 5XX"
+      AlarmName: "[cms][ALB][Error] Target 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription: !Sub |
-        5XX server errors originating from the ${AppName} target group exceeded 0
+      AlarmDescription: |
+        5XX server errors originating from the cms target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
@@ -249,7 +202,7 @@ Resources:
         - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
-              Value: !Ref AppName
+              Value: cms
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -261,7 +214,7 @@ Resources:
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -269,15 +222,15 @@ Resources:
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
           MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
-          Name: !Sub ${AppName}-web
+          Name: cms-web
           PortMappings:
             - HostPort: 0
-              ContainerPort: !Ref ContainerPort
+              ContainerPort: 3000
           Command:
             - !Ref WebContainerCommand
       Tags:
         - Key: Project
-          Value: !Ref AppName
+          Value: cms
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
@@ -293,13 +246,13 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: !If [CreateProductionResources, !Ref DesiredWebsProduction, !Ref DesiredWebs]
       LoadBalancers:
-        - ContainerName: !Sub ${AppName}-web
-          ContainerPort: !Ref ContainerPort
+        - ContainerName: cms-web
+          ContainerPort: 3000
           TargetGroupArn: !Ref ALBTargetGroup
       Role: !Ref ECSServiceIAMRole
       Tags:
         - Key: Project
-          Value: !Ref AppName
+          Value: cms
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
@@ -315,23 +268,21 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: AAAA
-          Name: !Sub ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          Name: !Sub cms.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
-          Name: !Sub ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          Name: !Sub cms.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
   # ECS Service - Worker
   WorkerLogGroup:
-    Condition: CreateWorkerResources
     Type: "AWS::Logs::LogGroup"
     Properties:
       RetentionInDays: 14
   WorkerTaskDefinition:
-    Condition: CreateWorkerResources
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
@@ -350,7 +301,7 @@ Resources:
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -371,7 +322,6 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
   WorkerService:
-    Condition: CreateWorkerResources
     Type: "AWS::ECS::Service"
     Properties:
       Cluster: !Ref ECSCluster
@@ -488,17 +438,17 @@ Resources:
 Outputs:
   WorkerTaskDefinitionArn:
     Description: Arn for the worker task definition
-    Value: !If [CreateWorkerResources, !Ref WorkerTaskDefinition, ""]
+    Value: !Ref WorkerTaskDefinition
   WorkerTaskDefinitionName:
     Description: Name of the worker task definition
     Value: !Sub ${AppName}-worker
   WorkerServiceName:
     Description: Name of the worker service
-    Value: !If [CreateWorkerResources, !GetAtt WorkerService.Name, ""]
+    Value: !GetAtt WorkerService.Name
   WorkerLogGroupName:
     Description: Name of the worker log group
-    Value: !If [CreateWorkerResources, !Ref WorkerLogGroup, ""]
+    Value: !Ref WorkerLogGroup
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+      cms.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
