Replace AppName references

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -289,7 +289,7 @@ Resources:
         - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
-              Value: !Ref AppName
+              Value: cms
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -309,12 +309,12 @@ Resources:
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
           MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
-          Name: !Sub ${AppName}-worker
+          Name: !Sub cms-worker
           Command:
             - worker
       Tags:
         - Key: Project
-          Value: !Ref AppName
+          Value: cms
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
@@ -331,7 +331,7 @@ Resources:
       DesiredCount: !If [CreateProductionResources, !Ref DesiredWorkersProduction, !Ref DesiredWorkers]
       Tags:
         - Key: Project
-          Value: !Ref AppName
+          Value: cms
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
@@ -441,7 +441,7 @@ Outputs:
     Value: !Ref WorkerTaskDefinition
   WorkerTaskDefinitionName:
     Description: Name of the worker task definition
-    Value: !Sub ${AppName}-worker
+    Value: !Sub cms-worker
   WorkerServiceName:
     Description: Name of the worker service
     Value: !GetAtt WorkerService.Name
