Unparameterize container port

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -63,9 +63,6 @@ Parameters:
     Default: ""
   SecretsVersion:
     Type: String
-  ContainerPort:
-    Type: String
-    Default: "3000"
   ContainerMemory:
     Type: String
     Default: 500
@@ -268,7 +265,7 @@ Resources:
           Name: exchange-web
           PortMappings:
             - HostPort: 0
-              ContainerPort: !Ref ContainerPort
+              ContainerPort: 3000
           Command:
             - web
       Tags:
@@ -290,7 +287,7 @@ Resources:
       DesiredCount: !If [CreateProductionResources, 5, 2]
       LoadBalancers:
         - ContainerName: exchange-web
-          ContainerPort: !Ref ContainerPort
+          ContainerPort: 3000
           TargetGroupArn: !Ref ALBTargetGroup
       Role: !Ref ECSServiceIAMRole
       Tags:
